{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 18,
  "lineage": "07d49d94-6ce3-11e4-b39b-0a0602d310d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0f939a54b18ea7f03",
            "id": "igw-0f939a54b18ea7f03",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Anais.IGW"
            },
            "vpc_id": "vpc-08288fcd690c55581"
          },
          "dependencies": [
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f939a54b18ea7f03",
            "id": "r-rtb-075ad45f0e223078f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075ad45f0e223078f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_route_table.public_route_table",
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-075ad45f0e223078f",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eng67.Anais.Terraform.Route.Public"
            },
            "vpc_id": "vpc-08288fcd690c55581"
          },
          "dependencies": [
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e245d81b53fef64",
            "route_table_id": "rtb-075ad45f0e223078f",
            "subnet_id": "subnet-0776b2017df3ec6c4"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Eng67.Anais.app.SG.terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9dd7cd79a66a404",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Eng67.Anais.app.SG.terraform",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Security group for app",
              "Name": "Eng67.Anais.app.SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08288fcd690c55581"
          },
          "dependencies": [
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-08541cb791adae2cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.32.7.0/24",
            "id": "subnet-08541cb791adae2cd",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Anais.Terraform.Subnet.Private"
            },
            "vpc_id": "vpc-08288fcd690c55581"
          },
          "dependencies": [
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0776b2017df3ec6c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.32.8.0/24",
            "id": "subnet-0776b2017df3ec6c4",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Anais.Terraform.Subnet.Public"
            },
            "vpc_id": "vpc-08288fcd690c55581"
          },
          "dependencies": [
            "aws_vpc.Eng67_Anais_Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Eng67_Anais_Terraform_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-08288fcd690c55581",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-0f144d616f3caf0f8",
            "default_route_table_id": "rtb-0352d070b518d31eb",
            "default_security_group_id": "sg-0eaa4c52cec955b74",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08288fcd690c55581",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0352d070b518d31eb",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Anais.Terraform.VPC"
            }
          }
        }
      ]
    }
  ]
}